@@ -241,18 +241,39 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-return|return
-operator|new
-name|ExitableFields
-argument_list|(
+name|Fields
+name|fields
+init|=
 name|super
 operator|.
 name|fields
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|queryTimeout
+operator|.
+name|isTimeoutEnabled
+argument_list|()
+condition|)
+block|{
+return|return
+operator|new
+name|ExitableFields
+argument_list|(
+name|fields
 argument_list|,
 name|queryTimeout
 argument_list|)
 return|;
+block|}
+else|else
+block|{
+return|return
+name|fields
+return|;
+comment|// break out of wrapper as soon as possible
+block|}
 block|}
 annotation|@
 name|Override
